--- a/demo/demo.html
+++ b/demo/demo.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>抽奖</title>
-    <link rel="stylesheet" href="./demo.css">
+    <link rel="stylesheet" href="./../dist/index.css">
 	</head>
 	<body>
 		<script src="../dist/prize.js"></script>
