fix: 修复中奖时图片号码与实际展示图片不符的问题，确保未中奖时三个号码不同

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -19,7 +19,10 @@
         imageType: 'jpeg'
       });
       document.querySelector('#btn').addEventListener('click', function(){
-        threePrize.start(true, 3)
+        let win = Math.random() > 0.5 ? true : false
+        let num = Math.round(Math.random() * 12 )
+        console.log(win, num)
+        threePrize.start(win, num)
       })
 		</script>
 	</body>
